<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.choche.guia02_ejercicio.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/txtURL"
            android:gravity="center"
            android:hint="@string/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbnCambiarnombre"
                android:text="@string/rbtnCambiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:checked="true"
                android:id="@+id/rbnNoCambiarnombre"
                android:text="@string/rbtnNoCambiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <EditText
            android:id="@+id/txtNombre"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:id="@+id/prgBarra"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/lblEstado"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado" />

        <Button
            android:id="@+id/btnDescargar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnDescargar" />
    </LinearLayout>

</RelativeLayout>
